--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Uss</title>
     <link rel="stylesheet" type="text/css" href="asset/uss.css">
+    <link rel="shortcut icon" href="asset/pis.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/40363c613f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -18,11 +20,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Profil</a>
+                <a class="nav-link active" aria-current="page" href="#profil">Profil</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Achievment</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                 <a class="nav-link" href="#">More</a>
                 </li>
@@ -32,8 +34,58 @@
     </nav>  
         <div class="container position-absolute top-50 start-50 translate-middle text-center">
             <p class="raleway text-white display-3">ABOUT USS !!</p>
+            <span><a href="#profil"><i class="fa-solid fa-chevron-down fs-1 text-white"></i></a></span>
         </div>
     </div>
-    <img src="asset/waves.svg" alt="" width="100%">
+        <!-- <img src="asset/waves.svg" alt="" width="100%"> -->
+    <svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 360" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(198, 35, 104, 1)" offset="0%"></stop><stop stop-color="rgba(255, 111, 97, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,144L40,120C80,96,160,48,240,78C320,108,400,216,480,246C560,276,640,228,720,174C800,120,880,60,960,66C1040,72,1120,144,1200,156C1280,168,1360,120,1440,102C1520,84,1600,96,1680,84C1760,72,1840,36,1920,66C2000,96,2080,192,2160,222C2240,252,2320,216,2400,216C2480,216,2560,252,2640,270C2720,288,2800,288,2880,294C2960,300,3040,312,3120,288C3200,264,3280,204,3360,192C3440,180,3520,216,3600,246C3680,276,3760,300,3840,270C3920,240,4000,156,4080,156C4160,156,4240,240,4320,264C4400,288,4480,252,4560,246C4640,240,4720,264,4800,276C4880,288,4960,288,5040,288C5120,288,5200,288,5280,240C5360,192,5440,96,5520,66C5600,36,5680,72,5720,90L5760,108L5760,360L5720,360C5680,360,5600,360,5520,360C5440,360,5360,360,5280,360C5200,360,5120,360,5040,360C4960,360,4880,360,4800,360C4720,360,4640,360,4560,360C4480,360,4400,360,4320,360C4240,360,4160,360,4080,360C4000,360,3920,360,3840,360C3760,360,3680,360,3600,360C3520,360,3440,360,3360,360C3280,360,3200,360,3120,360C3040,360,2960,360,2880,360C2800,360,2720,360,2640,360C2560,360,2480,360,2400,360C2320,360,2240,360,2160,360C2080,360,2000,360,1920,360C1840,360,1760,360,1680,360C1600,360,1520,360,1440,360C1360,360,1280,360,1200,360C1120,360,1040,360,960,360C880,360,800,360,720,360C640,360,560,360,480,360C400,360,320,360,240,360C160,360,80,360,40,360L0,360Z"></path><defs><linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(198, 35, 104, 1)" offset="0%"></stop><stop stop-color="rgba(255, 111, 97, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 50px); opacity:0.9" fill="url(#sw-gradient-1)" d="M0,252L40,264C80,276,160,300,240,264C320,228,400,132,480,126C560,120,640,204,720,210C800,216,880,144,960,102C1040,60,1120,48,1200,72C1280,96,1360,156,1440,186C1520,216,1600,216,1680,234C1760,252,1840,288,1920,258C2000,228,2080,132,2160,132C2240,132,2320,228,2400,276C2480,324,2560,324,2640,276C2720,228,2800,132,2880,102C2960,72,3040,108,3120,132C3200,156,3280,168,3360,162C3440,156,3520,132,3600,144C3680,156,3760,204,3840,186C3920,168,4000,84,4080,96C4160,108,4240,216,4320,246C4400,276,4480,228,4560,192C4640,156,4720,132,4800,108C4880,84,4960,60,5040,96C5120,132,5200,228,5280,222C5360,216,5440,108,5520,108C5600,108,5680,216,5720,270L5760,324L5760,360L5720,360C5680,360,5600,360,5520,360C5440,360,5360,360,5280,360C5200,360,5120,360,5040,360C4960,360,4880,360,4800,360C4720,360,4640,360,4560,360C4480,360,4400,360,4320,360C4240,360,4160,360,4080,360C4000,360,3920,360,3840,360C3760,360,3680,360,3600,360C3520,360,3440,360,3360,360C3280,360,3200,360,3120,360C3040,360,2960,360,2880,360C2800,360,2720,360,2640,360C2560,360,2480,360,2400,360C2320,360,2240,360,2160,360C2080,360,2000,360,1920,360C1840,360,1760,360,1680,360C1600,360,1520,360,1440,360C1360,360,1280,360,1200,360C1120,360,1040,360,960,360C880,360,800,360,720,360C640,360,560,360,480,360C400,360,320,360,240,360C160,360,80,360,40,360L0,360Z"></path><defs><linearGradient id="sw-gradient-2" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(198, 35, 104, 1)" offset="0%"></stop><stop stop-color="rgba(198, 35, 104, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 100px); opacity:0.8" fill="url(#sw-gradient-2)" d="M0,108L40,114C80,120,160,132,240,156C320,180,400,216,480,210C560,204,640,156,720,162C800,168,880,228,960,228C1040,228,1120,168,1200,174C1280,180,1360,252,1440,240C1520,228,1600,132,1680,90C1760,48,1840,60,1920,54C2000,48,2080,24,2160,36C2240,48,2320,96,2400,108C2480,120,2560,96,2640,72C2720,48,2800,24,2880,36C2960,48,3040,96,3120,102C3200,108,3280,72,3360,102C3440,132,3520,228,3600,258C3680,288,3760,252,3840,240C3920,228,4000,240,4080,216C4160,192,4240,132,4320,114C4400,96,4480,120,4560,120C4640,120,4720,96,4800,102C4880,108,4960,144,5040,132C5120,120,5200,60,5280,54C5360,48,5440,96,5520,138C5600,180,5680,216,5720,234L5760,252L5760,360L5720,360C5680,360,5600,360,5520,360C5440,360,5360,360,5280,360C5200,360,5120,360,5040,360C4960,360,4880,360,4800,360C4720,360,4640,360,4560,360C4480,360,4400,360,4320,360C4240,360,4160,360,4080,360C4000,360,3920,360,3840,360C3760,360,3680,360,3600,360C3520,360,3440,360,3360,360C3280,360,3200,360,3120,360C3040,360,2960,360,2880,360C2800,360,2720,360,2640,360C2560,360,2480,360,2400,360C2320,360,2240,360,2160,360C2080,360,2000,360,1920,360C1840,360,1760,360,1680,360C1600,360,1520,360,1440,360C1360,360,1280,360,1200,360C1120,360,1040,360,960,360C880,360,800,360,720,360C640,360,560,360,480,360C400,360,320,360,240,360C160,360,80,360,40,360L0,360Z"></path></svg>        
+    <div class="container-fluid" id="profil">
+        <figure class="mx-auto text-center">
+            <img src="asset/uss.png" alt="" class="rounded-circle" width="320">
+            <figcaption class="raleway fs-2 py-3">Rizqy Bagus Saputra</figcaption>
+        </figure>
+    </div>
+    <div class="container mt-5">
+        <div class="row col-xl-12 col-12">
+            <div class="col-xl-6">
+                <h4 class="text-center raleway">Sekilas Tentang Saya</h4>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla excepturi corrupti, dolorum dignissimos recusandae doloribus animi laborum labore beatae nobis quod perferendis voluptas natus iure asperiores sequi. Ut quae veniam nihil asperiores est aliquam perferendis possimus? Animi odio nisi illum est laboriosam dolorum quisquam veritatis quos similique adipisci voluptatum eius voluptates ut hic, exercitationem facere perspiciatis accusamus iure inventore reprehenderit eligendi. Perferendis, nihil?</p>
+            </div>
+            <div class="col-xl-6">
+                <h4 class="text-center raleway">Skills</h4>
+                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, minus molestiae magnam neque animi culpa cupiditate perferendis ipsum laboriosam, explicabo recusandae enim! Dignissimos, magnam reprehenderit blanditiis odit tenetur reiciendis delectus nemo ea dolorem cupiditate praesentium quo deleniti nostrum sapiente ex saepe optio minima laborum ratione modi enim magni earum! Quidem, ipsa deserunt facere nobis maxime similique accusamus rerum nisi eos non officia ullam sunt?</p>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- ACHIEVMENT -->
+    <!-- <div class="container mt-5">
+        <div class="row col-xl-12">
+            <h4 class="text-center raleway">Achievment</h4>
+        <div class="col-xl-3 bg-danger">A</div>
+        <div class="col-xl-3 bg-warning">B</div>
+        <div class="col-xl-3 bg-info">C</div>
+        <div class="col-xl-3 bg-success">D</div>
+        </div>
+    </div> -->
+    <!-- ACHIEVMENT -->
+
+    <div class="container mt-5">
+        <div class="col-xl-4 mx-auto">
+            <h4 class="raleway text-center mb-3">Sosial Media</h4>
+            <div class="text-center d-flex justify-content-between">
+                <i class="fa-brands fs-1 fa-instagram"></i>
+                <i class="fa-brands fs-1 fa-github"></i>
+                <i class="fa-brands fs-1 fa-twitter"></i>
+            </div>
+        </div>
+    </div>
+    <footer class="mt-5 position-relative" style="background-color: #C62368; height: 140px;">
+        <h5 class="position-absolute top-50 start-50 translate-middle text-white raleway" style="cursor: pointer;">&copy;Sukimumuu 2023</h5>
+        <span class="badge text-bg-warning position-absolute bottom-0 end-0">Under construction</span>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
