--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <div class="row col-xl-12 col-12">
             <div class="col-xl-6">
                 <h4 class="text-center raleway">Sekilas Tentang Saya</h4>
-                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla excepturi corrupti, dolorum dignissimos recusandae doloribus animi laborum labore beatae nobis quod perferendis voluptas natus iure asperiores sequi. Ut quae veniam nihil asperiores est aliquam perferendis possimus? Animi odio nisi illum est laboriosam dolorum quisquam veritatis quos similique adipisci voluptatum eius voluptates ut hic, exercitationem facere perspiciatis accusamus iure inventore reprehenderit eligendi. Perferendis, nihil?</p>
+                <p class="text-center">Haloo.. kenalin nama aku Bagus, berumur 17 dan suka belajar hal baru. saat ini aku bersekolah di SMK Negeri 1 Purwokerto dengan mengambil jurusan RPL ato Rekayasa Perangkat Lunak, saat ini aku sedang mendalami belajar web khususnya bagian Front End atau Design Web dan sedikit-sedikit belajar cara penggunaan Android Studio, yh karna aku awalnya tertarik dalam pengembangan aplikasi ataupun game.</p>
             </div>
             <div class="col-xl-6">
                 <h4 class="text-center raleway">Skills</h4>
-                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, minus molestiae magnam neque animi culpa cupiditate perferendis ipsum laboriosam, explicabo recusandae enim! Dignissimos, magnam reprehenderit blanditiis odit tenetur reiciendis delectus nemo ea dolorem cupiditate praesentium quo deleniti nostrum sapiente ex saepe optio minima laborum ratione modi enim magni earum! Quidem, ipsa deserunt facere nobis maxime similique accusamus rerum nisi eos non officia ullam sunt?</p>
+                <p class="text-center">Mengenai skill aku, saat ini aku belum mempunyai skill yang terasah karna masih dalam tahap belajar, tapi aku yakin bahwa aku memiliki potensi dalam dunia progamming.</p>
             </div>
         </div>
     </div>
@@ -75,9 +75,9 @@
         <div class="col-xl-4 mx-auto">
             <h4 class="raleway text-center mb-3">Sosial Media</h4>
             <div class="text-center d-flex justify-content-between">
-                <i class="fa-brands fs-1 fa-instagram"></i>
-                <i class="fa-brands fs-1 fa-github"></i>
-                <i class="fa-brands fs-1 fa-twitter"></i>
+                <a href="https://instagram.com/rizqybs24?igshid=YmMyMTA2M2Y="><i class="fa-brands fs-1 fa-instagram"></i></a>
+                <a href="https://github.com/sukimumuu"><i class="fa-brands fs-1 fa-github"></i></a>
+                <a href="#"><i class="fa-brands fs-1 fa-twitter"></i></a>
             </div>
         </div>
     </div>
