--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="text-white font-mono animate-bounce bg-sky-600 hover:bg-sky-700 w-44 h-10 mt-8 text-xl rounded-md" id="tombol">Discover me !</button>
             <div class="w-44 text-white hidden" id="discover-me">
                 <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="profil.html">Profil</a></li>
-                <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="">Project</a></li>
+                <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="project.html">Project</a></li>
                 <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="">Contact</a></li>
                 <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="">More</a></li>
             </div>
