update contact and some change

--- a/profil.html
+++ b/profil.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rizqy Bagus</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://kit.fontawesome.com/40363c613f.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="asset/index.css">
     </head>
 
@@ -17,10 +18,24 @@
                     <img id="imgProfil" src="asset/rizqybagus-foto.webp" class="sm:w-80 rounded-full" alt="" srcset="">
                     <p id="pProfil" class="text-white mt-5 text-xl font-mono">Rizqy Bagus Saputra</p>
                     <span id="spanProfil" class="text-white font-mono text-center sm:w-2/4 p-3">
-                        I am currently studying at SMK Negeri 1 Purwokerto majoring in Software Engineering. I have a
+                        I am a graduate of SMK Negeri 1, Majoring in Software Engineering. I have a
                         strong passion for the IT field, and I am currently honing my skills to become a backend
                         developer.
-                        Right now, I am learning PHP language with Laravel framework and JavaScript DOM.</span>
+                        Right now, I am learning PHP language with Laravel framework and also learn about javascript
+                    </span>
+                        <div class="mt-8 text-white">
+                            <h3 class=" font-mono border-b border-b-white pb-2 mt-2">Can be relied on to do the work</h3>
+                            <div class="flex gap-3 mt-3 justify-center text-xl">
+                                <i class="fa-brands fa-html5"></i>
+                                <i class="fa-brands fa-css3"></i>
+                                <i class="fa-brands fa-js"></i>
+                                <i class="fa-brands fa-bootstrap"></i>
+                                <i class="fa-brands fa-php"></i>
+                                <i class="fa-brands fa-laravel"></i>
+                                <i class="fa-brands fa-github"></i>
+
+                            </div>
+                        </div>
                 </div>
             </div>
         </main>
