--- a/project.html
+++ b/project.html
@@ -15,27 +15,44 @@
             <div class="w-3/4 mx-auto p-3 mt-6" id="containerProject">
                 <p class="text-white border-b pb-2 border-b-white m-3 font-mono text-3xl">The Project</p>
                 <div class="flex flex-row gap-3 text-white mb-10 items-center" id="contentProject">
+                    <img src="asset/perpus.png" width="500" class="bayangan-box" alt="" srcset="">
+                    <div class="flex flex-col">
+                        <a href="#" class="font-mono text-2xl">Web Library Profil</a href="">
+                        <span>2024</span>
+                        <span>Web Profil and Blog</span>
+                        <li>Backend Engineer</li>
+                        <a href="#" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105">Look Me !</a>
+                    </div>
+                </div>
+                <div class="flex flex-row gap-3 text-white mb-10 items-center" id="contentProject">
                     <img src="asset/game_exhi.jpg" width="500" class="bayangan-box" alt="" srcset="">
                     <div class="flex flex-col">
-                        <a href="" class="font-mono text-2xl">Web Game Exhibition</a href="">
+                        <a href="#" class="font-mono text-2xl">Web Game Exhibition</a href="">
                         <span>2024</span>
                         <span>Web Application</span>
+                        <li>Backend Engineer</li>
+                        <a href="https://rplexhibition.jarijariid.com/" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105" target="_blank">Look Me !</a>
                     </div>
                 </div>
                 <div class="flex flex-row gap-3 text-white mb-10 items-center" id="contentProject">
                     <img src="asset/nightmare1.jpg" width="500" class="bayangan-box" alt="" srcset="">
                     <div class="flex flex-col">
-                        <a href="" class="font-mono text-2xl">Nightmare</a href="">
+                        <a href="#" class="font-mono text-2xl">Nightmare</a href="">
                         <span>2023</span>
                         <span>Game Mobile</span>
+                        <li>Leader Team</li>
+                        <li>Progammer</li>
+                        <a href="https://drive.google.com/drive/folders/1mljxdB83CWHWEIBqTScVqft1vgRcGFHq" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105" target="_blank">Look Me !</a>   
                     </div>
                 </div>
                 <div class="flex flex-row gap-3 text-white mb-10 items-center" id="contentProject">
                     <img src="asset/pm_landing-page.jpg" width="500" class="bayangan-box" alt="" srcset="">
                     <div class="flex flex-col">
-                        <a href="" class="font-mono text-2xl">PM Landing page</a href="">
+                        <a href="#" class="font-mono text-2xl">PM Landing page</a href="">
                         <span>2022</span>
                         <span>Landing page</span>
+                        <li>Frontend Engineer</li>
+                        <a href="https://pm.smkn1purwokerto.sch.id/" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105" target="_blank">Look Me !</a>
                     </div>
                 </div>
                
