--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <main class="h-screen ">
         <div class="w-2/5 h-96 absolute border-slate-950 transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 ">
         <div class="flex flex-col items-center justify-center h-full relative">
-            <h3 class="text-white text-5xl font-mono cursor-pointer warna-warna">Sukimumuu</h3>
+            <h3 class="text-white text-5xl font-mono cursor-pointer warna-warna">Rizqy Bagus Saputra</h3>
             <button class="text-white font-mono animate-bounce bg-sky-600 hover:bg-sky-700 w-44 h-10 mt-8 text-xl rounded-md" id="tombol">Discover me !</button>
             <div class="w-44 text-white hidden" id="discover-me">
                 <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="profil.html">Profil</a></li>
                 <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="project.html">Project</a></li>
-                <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="">Contact</a></li>
+                <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="contact.html">Contact</a></li>
                 <li class="font-mono list-none text-center p-2 hover:bg-white cursor-pointer hover:text-black"><a href="">More</a></li>
             </div>
         </div>
