--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
 <body class="bg-black">
     <main>
         <a href="index.html" class="text-white hover:underline p-2">Back</a>
-        <div class="w-2/5 mx-auto mt-20 text-white">
-            <h3 class="text-center text-3xl border-b border-b-white pb-3">Contact Me At</h3>
-            <div class="flex gap-5 justify-center mt-8">
+        <div class="w-2/5 max-[500px]:w-full mx-auto mt-20 text-white">
+            <h4 class="text-center text-3xl border-b border-b-white pb-3">Contact Me At</h4>
+            <div class="flex gap-5 justify-center mt-8 max-[500px]:flex-col max-[500px]:p-3">
                 <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=rizqybagussp@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i> @rizqybagussp@gmail.com</a>
                 <a href="https://www.instagram.com/rizqybs24?igsh=YnVjejdnZnVpOTN4" target="_blank"><i class="fa-brands fa-instagram"></i> @rizqybs24</a>
                 <a href="https://github.com/sukimumuu/" target="_blank"><i class="fa-brands fa-github"></i> Sukimumuu</a>
