--- a/project.html
+++ b/project.html
@@ -20,7 +20,8 @@
                         <a href="#" class="font-mono text-2xl">Web Library Profil</a href="">
                         <span>2024</span>
                         <span>Web Profil and Blog</span>
-                        <li>Backend Engineer</li>
+                        <li class="mb-2">Backend Engineer</li>
+                        <span>Create a profile website for the SMK Negeri 1 Purwokerto library with a blog system in it</span>
                         <a href="#" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105">Look Me !</a>
                     </div>
                 </div>
@@ -30,7 +31,8 @@
                         <a href="#" class="font-mono text-2xl">Web Game Exhibition</a href="">
                         <span>2024</span>
                         <span>Web Application</span>
-                        <li>Backend Engineer</li>
+                        <li class="mb-2">Backend Engineer</li>
+                        <span>This website was created as a forum to display the work of students majoring in RPL at SMK Negeri 1 Purwokerto</span>
                         <a href="https://rplexhibition.jarijariid.com/" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105" target="_blank">Look Me !</a>
                     </div>
                 </div>
@@ -41,7 +43,8 @@
                         <span>2023</span>
                         <span>Game Mobile</span>
                         <li>Leader Team</li>
-                        <li>Progammer</li>
+                        <li class="mb-2">Progammer</li>
+                        <span>Making a 2D platformer Android game with Unity</span>
                         <a href="https://drive.google.com/drive/folders/1mljxdB83CWHWEIBqTScVqft1vgRcGFHq" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105" target="_blank">Look Me !</a>   
                     </div>
                 </div>
@@ -51,7 +54,8 @@
                         <a href="#" class="font-mono text-2xl">PM Landing page</a href="">
                         <span>2022</span>
                         <span>Landing page</span>
-                        <li>Frontend Engineer</li>
+                        <li class="mb-2">Frontend Engineer</li>
+                        <span>Create a landing page for the Marketing major at SMK Negeri 1 Purwokerto</span>
                         <a href="https://pm.smkn1purwokerto.sch.id/" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105" target="_blank">Look Me !</a>
                     </div>
                 </div>
