update link project

--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
                         <span>Web Profil and Blog</span>
                         <li class="mb-2">Backend Engineer</li>
                         <span>Create a profile website for the SMK Negeri 1 Purwokerto library with a blog system in it</span>
-                        <a href="#" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105">Look Me !</a>
+                        <a href="https://perpustakaansmkn1purwokerto.jarijariid.com/" class="w-24 bg-orange-400 p-2 mt-8 hover:scale-105">Look Me !</a>
                     </div>
                 </div>
                 <div class="flex flex-row gap-3 text-white mb-10 items-center" id="contentProject">
