--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
             <p class="text-white fixed bottom-1 left-1 font-mono">&copy; Rizqy Bagus Saputra</p>
         </footer>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+    Swal.fire({
+    title: 'Info!',
+    html: 'Untuk web portofolio terbaru, pindah disini yaa <a href="https://ussporto.vercel.app/" target="_blank" style="color: blue">Kunjungi</a>.',
+    icon: 'info',
+    confirmButtonText: 'OK'
+    });
+</script>
     <script src="asset/index.js"></script>
 </body>
 </html>
